# compilerbau-pkk

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  bnf.uml  build.sh  commit_template  layout.xml  main.c  sdlinterf.c  sdlinterf.h  syntax.bnf  syntaxgraph.drawio  turtle-eval.c  turtle-nametab.c  turtle-types.h  turtle.h
docs/html/: annotated.html  classes.html  debug_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dynamic__array_8h_source.html  files.html  index.html  lexer_8h_source.html  md_README.html  menudata.js  pages.html  parser_8h_source.html  sdlinterf_8h_source.html  structArray-members.html  structArray.html  structDEBUG__TURTLE__TYPE__NAMES__T-members.html  structDEBUG__TURTLE__TYPE__NAMES__T.html  struct__funcdef-members.html  struct__funcdef.html  struct__nameentry-members.html  struct__nameentry.html  struct__srcpos-members.html  struct__srcpos.html  struct__treenode-members.html  struct__treenode.html  structdelimiter__t-members.html  structdelimiter__t.html  structmstack__elem__t-members.html  structmstack__elem__t.html  structtoken__t-members.html  structtoken__t.html  structvstack__elem__t-members.html  structvstack__elem__t.html  structword__t-members.html  structword__t.html  turtle-types_8h_source.html  turtle_8h_source.html  union__namedata-members.html  union__namedata.html  union__nodedata-members.html  (+3 more)
src/: debug.h  dynamic_array.c  dynamic_array.h  gkk_parse.c  lexer.c  lexer.h  main.c  parser.c  parser.h  turtle-nametab.c  turtle-types.h  turtle.h
tests/: bestagons  circle  pythagoras_fraktal  sin_cos  spirale
(+33 files in other folders)
